# adbutils

./: .coveragerc  .gitignore  .travis.yml  README.md  adbutils.py  build_wheel.py  codecov.yml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: main.yml  publish-to-pypi.yml
adbutils/: __init__.py  __main__.py  _adb.py  _deprecated.py  _device.py  _device_base.py  _fetch.py  _interfaces.py  _proto.py  _utils.py  _version.py  errors.py  extras.py  install.py  mixin.py  pidcat.py  screenrecord.py  screenshot.py  shell.py  sync.py
adbutils/binaries/: README.md  __init__.py
adbutils/server/: __init__.py
docs/: PROTOCOL.md
e2etests/: conftest.py  test_adb.py  test_deprecated.py  test_device.py  test_device_base.py  test_device_shell_extend.py  test_device_sync.py
examples/: reset-offline.py
test_real_device/: conftest.py  test_deprecated.py  test_device.py  test_forward_reverse.py  test_record.py  test_utils.py
tests/: adb_server.py  conftest.py  test_adb.py  test_adb_server.py  test_adb_shell.py  test_deprecated.py  test_device.py  test_devices.py  test_ext.py  test_extra.py  test_forward.py  test_forward_reverse.py  test_import.py  test_mixin.py  test_record.py  test_reverse.py  test_simple.py  test_sync.py  test_utils.py
tests/test-assets/test_s/a/aa/: aa1.txt
tests/test-assets/test_s/a/ab/: ab1.txt  ab2.txt
tests/test-assets/test_s/c/ca/: ca1.txt
tests/test-assets/test_s/c/ca/caa/: caa1.txt
