# https://docs.openstack.org/pbr/3.0.0/
#
[metadata]
name = adbutils
author = codeskyblue
author-email = codeskyblue@gmail.com
summary = Pure Python Adb Library
license = MIT
# description-file = ABOUT.rst
home-page = https://github.com/openatx/adbutils
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
#package-data =
#	adbutils = binaries/*

[bdist_wheel]
universal = 0
